# sc2-bot

./: .editorconfig  .gitignore  README.md  StarCraftII  pyproject.toml  sc2-bot.sln  sc2-client.ps1  sc2-client.sh  sc2-python-bot.sh  sc2_client.sh  sc2_setup.sh  tmp.json
SC2Protocol/: SC2Protocol.csproj  setup.sh
Web/: Program.cs  Web.csproj  package.json  pnpm-lock.yaml
Web/Components/: App.razor  CircuitComponentBase.cs  ConnectionManager.razor  CreateGame.razor  CreateOrLeaveGame.razor  HeadlessClientManager.razor  RequestHistory.razor  _Imports.razor
Web/Components/Debug/: AllClients.razor  RequestHistory.razor
Web/Components/InGame/: GameState.razor  LeaveGame.razor
Web/Components/InitConnection/: ClientAndConnection.razor  ConnectionManager.razor  HeadlessClientManager.razor
Web/Components/InitGame/: CreateGame.razor  CreateOrLeaveGame.razor  GameCreatedArgs.cs  GameInit.razor  HostMultiplayerGame.razor  InterfaceOptionsSelector.razor  JoinGame.razor  JoinMultiplayerGame.razor  ListCreatedGames.razor
Web/Components/Layout/: MainLayout.razor
Web/Components/Pages/: Error.razor  Home.razor  HostGame.razor  JoinGame.razor  PlaySolo.razor
Web/Models/: PlayerInfo.cs
Web/Properties/: launchSettings.json
Web/Services/: ClientManager.cs  IHeadlessClientService.cs  LinuxHeadlessClientService.cs  SC2Client.cs  TrackingCircuitHandler.cs  WebSocketService.cs
Web/Styles/: app.css
Web/wwwroot/: clipboard.js
pythonBot/: Player1.cs  join_host.py  launch_sc2.py  multiplayerSteps.md  patch_pysc2.py  play_host.py  pyproject.toml  readme.md
(+10 files in other folders)
