[project]
name = "sc2-bot"
version = "0.1.0"
description = "StarCraft II Bot Environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pysc2>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["Web", "SC2Protocol", "StarCraftII", "s2client-proto", "bin", "obj"]

[tool.uv]
dev-dependencies = []
